<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Dolphin Player</string>

	<string name="feedback">Feedback</string>
	<string name="mailid">E-mail ID (optional)</string>
	<string name="submit">Submit</string>
	<string name="description">Description</string>
	<string name="category">Category</string>
	<string name="cancel">Cancel</string>
	<string name="ok">OK</string>

	<string name="about">About</string>
	<string name="search">Search</string>
	<string name="quit">Quit</string>
	<string name="display">Display</string>
	<string name="setting">Settings</string>
	<string name="searchforafile">Search for a file</string>
	<string name="pressbackagaintoquit">Press back again to quit.</string>
	<string name="cantreadfolderduetopermissions">Can\'t read folder due to permissions
	</string>
	<string name="setasdefaultsubtitlefont">Successfully, set as default subtitle font</string>
	<string name="setasdefaulthomepath">Successfully, set as default home path</string>
	<string name="searching">Searching</string>
	<string name="searchingcurrentfilesystem">Searching current file system...</string>
	<string name="changeto">Change to </string>
	<string name="changetextcolor">Change text color</string>
	<string name="sortby">Sort by...</string>
	<string name="loop">Loop ...</string>
	<string name="pleaseenteryourthoughtsindescription">Please Enter your thoughts in Description
	</string>
	<string name="unabletoconnecttoserverpleasetryaftersometime">Unable to connect to server. Please try after
		sometime</string>
	<string name="calculatinginformation">Calculating information...</string>
	<string name="pathis">Path is</string>
	<string name="textcolor">Text color</string>
	<string name="changethetextcolorpreference">Change the text color preference</string>
	<string name="showhiddenfilesfolders">Show hidden files/folders</string>
	<string name="displayhiddenfilesandfolders">Display hidden files and folders</string>
	<string name="subtitle">Subtitle</string>
	<string name="hidesubtitles">Hide subtitles</string>
	<string name="donotshowsubtitlesevenifexists">Do not show subtitles even if subtitle files
 exists</string>
	<string name="audio">Audio</string>
	<string name="loopaudio">Play Audio</string>
	<string name="video">Video</string>
	<string name="loopvideo">Play Video</string>
	<string name="choosehowtoloopplayaudiofiles">Choose how to play audio files in a folder
	</string>
	<string name="choosehowtoloopplayvideofiles">Choose how to play video files in a folder
	</string>
	<string name="sortingtype">Sorting type</string>
	<string name="choosehowtosortfilesandfolders">Choose how to sort files and folders</string>
	<string name="language">Language</string>
	<string name="chooselanguageforapplication">Choose the language for application</string>
	<string name="help">Help</string>
	<string name="subtitlesize">Subtitle size</string>
	<string name="displaysizeofsubtitle">Display size of subtitle</string>
	<string name="showsubtitles">Show subtitles</string>
	<string name="showsubtitlesifexists">Show subtitles if subtitle file available</string>
	<string name="found">Found</string>
	<string name="files">file(s)</string>
	<string name="info">Info</string>
	<string name="home">Home</string>
	<string name="setyourdefaulthomepath">Set your default Home path</string>
	<string name="setavaliddirectory">Set a valid directory</string>
	<string name="setavalidsubtitlefontfile">Set a valid subtitle Font file</string>
	<string name="subtitleencodingtype">Subtitle Encoding Type</string>
	<string name="selectyourencodingtypeofsubtitle">Select your Encoding type of subtitle</string>
	<string name="fontfile">Font File</string>
	<string name="setyourfontfileforsubtitle">Set your font file for subtitle</string>
	<string name="skipvideoframesforseamlessviewing">Skip video frames when video lag occurs. This is required for files like mkv or when the mobile processor is slow</string>
	<string name="skipvideoframes">Skip video frames</string>
	<string name="sorting">Sorting</string>
	<string name="notification_description">Select to play</string>
	<string name="runforeground">Running in the Foreground</string>
	<string name="couldntfind">Couldn\'t find </string>
	
	<string name="loading">Loading.. </string>
	<string name="loadingcurrentfoldersystem">Loading current Folder system </string>

	<string name="advanced">Advanced Settings</string>
	
	<string name="skipframesalgorithm">Skip Frames Algorithm</string>
	<string name="skipframesstatement">Default value is Enabled. Enable this when Video Lag is Observed or when Video is playing slowly</string>
	
	<string name="skipbidirectionalframes">Skip Bidirectional Frames</string>
	<string name="skipbidirectionalframesstatement">Default value is Disabled. Do not enable this, used only for testing. This is used when video is playing very slowly or when heavy video lag is observed. This will make most frames to be skipped and most times videos are not viewable</string>
	
	<string name="yuv2rgbconversiontype">YUV2RGB Conversion Type</string>
	<string name="yuv2rgbconversiontypestatement">Default value is sws_scaler. Use ARM ASM for fast conversion of YUV frame to RGB frame and faster display. Enabling ARM ASM will not show videos for large width and height videos</string>
	
	<string name="displaypixelformat">Display Pixel Format</string>
	<string name="displaypixelformatstatement">Default value is RGB565. For more video clarity, Use RGB8888</string>

	<string name="useffmpegfastdecoding">Use FFmpeg fast decoding</string>
	<string name="useffmpegfastdecodingstatement">Default value is Disabled. For faster decoding, enable this</string>

	<string name="minimumvideoqsize">Minimum Video Q Size</string>
	<string name="minimumvideoqsizestatement">Default value is 256KB. For buffering the video for a larger time duration and to prevent audio stuttering, use increased minimum queue size</string>

	<string name="maximumvideoqsize">Maximum Video Q Size</string>
	<string name="maximumvideoqsizestatement">Default value is 2MB. Maximum Video Q Size should be always greater than Minimum Video Q Size</string>

	<string name="maximumaudioqsize">Maximum Audio Q Size</string>
	<string name="maximumaudioqsizestatement">Default value is 500KB. Please increase this to a relevant value, when Maximum Video Q Size is increased</string>

	<string name="streamminvideoqsize">Network Stream\nMin. Video Q Size</string>
	<string name="streamminvideoqsizestatement">Default value is 50KB. For buffering the video for a larger time duration and to prevent audio stuttering, use increased minimum queue size</string>

	<string name="streammaxvideoqsize">Network Stream\nMax. Video Q Size</string>
	<string name="streammaxvideoqsizestatement">Default value is 2MB. Maximum Video Q Size should be always greater than Minimum Video Q Size</string>

	<string name="streammaxaudioqsize">Network Stream\nMax. Audio Q Size</string>
	<string name="streammaxaudioqsizestatement">Default value is 256KB. Please increase this to a relevant value, when Maximum Video Q Size is increased</string>

	<string name="debugmode">Debugging mode</string>
	<string name="debugmodestatement">Disabled by default. Should be enabled only during development. Prints debug logs while playing audio and video files</string>

	<string name="avsyncmode">A/V Sync mode</string>
	<string name="avsyncmodestatement">Default value is Audio Clock. Should be enabled only during development. Used as the clock reference while playing the file</string>

	<string name="advyuv2rgb">YUV 2 RGB</string>
	<string name="advdisplaypixelformat">Display Pixel Format</string>
	<string name="advminvideoq">Minimum Video Q Size</string>
	<string name="advmaxvideoq">Maximum Video Q Size</string>
	<string name="advmaxaudioq">Maximum Audio Q Size</string>

	<string name="streamminvideoq">Stream Min. Video Q Size</string>
	<string name="streammaxvideoq">Stream Max. Video Q Size</string>
	<string name="streammaxaudioq">Stream Max. Audio Q Size</string>

	<string name="swsscaler">FFmpeg SWS SCALER Type</string>
	<string name="swsscalerstatement">Default value is SWS_BICUBIC</string>
	
</resources>
