<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@color/black">
	<TableLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:stretchColumns="*" android:shrinkColumns="*">

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:textColor="@color/offWhite"
			android:text="@string/display" android:textStyle="bold"
			 android:paddingLeft="4dip"
			android:background="@color/darkGray" />

		<View android:layout_width="fill_parent" android:layout_height="3dip"
			android:background="@color/darkGray" />

		<TableRow android:id="@+id/tblrowtextcolor"
			android:padding="4dip">
			<LinearLayout android:orientation="vertical"
				android:paddingLeft="8dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textSize="18sp"
					android:textColor="@color/white" android:textStyle="bold"
					android:text="@string/textcolor" />

				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/offWhite"
					android:text="@string/changethetextcolorpreference" />
				<TextView android:id="@+id/colorSelected"
					android:textStyle="italic" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/lightGray" />
			</LinearLayout>
			<ImageButton android:id="@+id/setting_color_button"
				android:src="@drawable/more" android:background="@color/transparent"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:layout_gravity="right" android:paddingRight="7dp" android:padding="3dp" />
		</TableRow>
		<View android:layout_width="fill_parent" android:layout_height="3dip"
			android:background="@color/darkGray" />

		<TableRow android:id="@+id/tblrowshowhiddenfiles"
		android:padding="4dip">
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:paddingLeft="8dip"
				android:layout_height="wrap_content">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textSize="18sp"
					android:textColor="@color/white" android:textStyle="bold"
					android:text="@string/showhiddenfilesfolders" />
					
				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/offWhite"
					android:text="@string/displayhiddenfilesandfolders" />

			</LinearLayout>
			<CheckBox android:id="@+id/setting_hidden_box"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_gravity="right" android:padding="3dp"
				android:checked="false" />
		</TableRow>
		<View android:layout_width="fill_parent" android:layout_height="3dip"
			android:background="@color/darkGray" />
		<!--  
		<TableRow android:id="@+id/tblrowdefaulthome"
		android:padding="4dip">
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:paddingLeft="8dip"

				android:layout_height="wrap_content">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textSize="18sp"
					android:textColor="@color/white" android:textStyle="bold"
					android:text="@string/home" />

				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/offWhite"
					android:text="@string/setyourdefaulthomepath" />
				<TextView android:id="@+id/defaulthomeselected"
					android:textStyle="italic" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/lightGray" />
			</LinearLayout>
			<ImageButton android:id="@+id/setting_defaulthome_button"
				android:src="@drawable/more" android:background="@color/transparent"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:layout_gravity="right" android:paddingRight="7dp" android:padding="3dp" />
		</TableRow>
		-->
		<View android:layout_width="fill_parent" android:layout_height="3dip"
			android:background="@color/darkGray" />
		
		<TableRow android:id="@+id/tblrowsortingtype"
		android:padding="4dip">
			<LinearLayout android:orientation="vertical"
				android:layout_height="wrap_content" android:paddingLeft="8dip"
				android:layout_width="fill_parent">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textSize="18sp"
					android:textColor="@color/white" android:textStyle="bold"
					android:text="@string/sortingtype" />
				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/offWhite"
					android:text="@string/choosehowtosortfilesandfolders" />
				<TextView android:id="@+id/sortoptionSelected"
					android:textStyle="italic" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/lightGray" />
			</LinearLayout>
			<ImageButton android:id="@+id/setting_sort_button"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:layout_gravity="right" android:background="#ff000000"
				android:paddingRight="7dp" android:padding="3dp"
				android:src="@drawable/more" />
		</TableRow>
		<View android:layout_width="fill_parent" android:layout_height="5dip"
			android:background="@color/black" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:textColor="@color/offWhite"
			android:textStyle="bold" android:text="@string/subtitle"
			 android:paddingLeft="4dip"
			android:background="@color/darkGray" />
		
		<TableRow android:id="@+id/tblrowshowsubtitles" 
		android:padding="4dip">
			<LinearLayout android:orientation="vertical"
				android:layout_height="wrap_content" android:paddingLeft="8dip"
			
				android:layout_width="fill_parent">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textSize="18sp"
					android:textColor="@color/white" android:textStyle="bold"
					android:text="@string/showsubtitles" />
				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/offWhite"
					android:text="@string/showsubtitlesifexists" />
			</LinearLayout>
			<CheckBox android:id="@+id/setting_subtitlehide_box"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_gravity="right" android:paddingRight="7dp" android:padding="3dp"
				android:checked="false" />
		</TableRow>
		<View android:layout_width="fill_parent" android:layout_height="3dip"
			android:background="@color/darkGray" />

		<TableRow android:id="@+id/tblrowsubtitlesize"
		android:padding="4dip">
			<LinearLayout android:orientation="vertical"
				android:layout_height="wrap_content" android:paddingLeft="8dip"
				android:layout_width="fill_parent">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textSize="18sp"
					android:textColor="@color/white" android:textStyle="bold"
					android:text="@string/subtitlesize" />
				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/offWhite"
					android:text="@string/displaysizeofsubtitle" />
				<TextView android:id="@+id/subtitleSizeSelected"
					android:textStyle="italic" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/lightGray" />
			</LinearLayout>
			<ImageButton android:id="@+id/setting_subtitlesize_button"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:layout_gravity="right"
			 android:paddingRight="7dp"
			 android:padding="3dp"
			  android:background="#ff000000"
				android:src="@drawable/more" />
		</TableRow>
		<View android:layout_width="fill_parent" android:layout_height="3dip"
			android:background="@color/darkGray" />
		<TableRow android:id="@+id/tblrowsubtitlefontfileselected"
		android:padding="4dip">
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:paddingLeft="8dip"

				android:layout_height="wrap_content">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textSize="18sp"
					android:textColor="@color/white" android:textStyle="bold"
					android:text="@string/fontfile" />

				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/offWhite"
					android:text="@string/setyourfontfileforsubtitle" />
				<TextView android:id="@+id/subtitlefontfileselected"
					android:textStyle="italic" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/lightGray" />
			</LinearLayout>
			<ImageButton android:id="@+id/setting_subtitlefontfile_button"
				android:src="@drawable/more" android:background="@color/transparent"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:layout_gravity="right" android:paddingRight="7dp" android:padding="3dp" />
		</TableRow>

		<View android:layout_width="fill_parent" android:layout_height="3dip"
			android:background="@color/darkGray" />

		<TableRow android:id="@+id/tblrowsubtitleencodingtype"
		android:padding="4dip">
			<LinearLayout android:orientation="vertical"
				android:layout_height="wrap_content" android:paddingLeft="8dip"
				android:layout_width="fill_parent">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textSize="18sp"
					android:textColor="@color/white" android:textStyle="bold"
					android:text="@string/subtitleencodingtype" />
				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/offWhite"
					android:text="@string/selectyourencodingtypeofsubtitle" />
				<TextView android:id="@+id/subtitleEncodingTypeSelected"
					android:textStyle="italic" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/lightGray" />
			</LinearLayout>
			<ImageButton android:id="@+id/setting_subtitleencoding_button"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:layout_gravity="right" android:background="#ff000000"
				android:paddingRight="7dp" android:padding="3dp"
				android:src="@drawable/more" />
		</TableRow>

		<View android:layout_width="fill_parent" android:layout_height="5dip"
			android:background="@color/black" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:textColor="@color/offWhite"
			android:textStyle="bold" android:text="@string/audio"
			android:paddingLeft="4dip"
			android:background="@color/darkGray" />
		<View android:layout_width="fill_parent" android:layout_height="5dip"
			android:background="@color/black" />

		<TableRow android:id="@+id/tblrowloopaudio"
		android:padding="4dip">
			<LinearLayout android:orientation="vertical"
				android:layout_height="wrap_content" android:paddingLeft="8dip"
				android:layout_width="fill_parent">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textSize="18sp"
					android:textColor="@color/white" android:textStyle="bold"
					android:text="@string/loopaudio" />
				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/offWhite"
					android:text="@string/choosehowtoloopplayaudiofiles" />
				<TextView android:id="@+id/audioloopSelected"
					android:textStyle="italic" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/lightGray" />
			</LinearLayout>
			<ImageButton android:id="@+id/setting_audioloop_button"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:layout_gravity="right" android:background="#ff000000"
				android:paddingRight="7dp" android:padding="3dp"
				android:src="@drawable/more" />
		</TableRow>

		<View android:layout_width="fill_parent" android:layout_height="5dip"
			android:background="@color/black" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:textColor="@color/offWhite"
			android:textStyle="bold" android:text="@string/video"
			android:paddingLeft="4dip"
			android:background="@color/darkGray" />
		<View android:layout_width="fill_parent" android:layout_height="5dip"
			android:background="@color/black" />

		<TableRow android:id="@+id/tblrowloopvideo"
		android:padding="4dip">
			<LinearLayout android:orientation="vertical"
			android:paddingLeft="8dip"
				android:layout_height="wrap_content" android:layout_width="fill_parent">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textSize="18sp"
					android:textColor="@color/white" android:textStyle="bold"
					android:text="@string/loopvideo" />
				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/offWhite"
					android:text="@string/choosehowtoloopplayvideofiles" />
				<TextView android:id="@+id/videoloopSelected"
					android:textStyle="italic" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/lightGray" />
			</LinearLayout>
			<ImageButton android:id="@+id/setting_videoloop_button"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:layout_gravity="right" android:background="#ff000000" 
				android:paddingRight="7dp" android:padding="3dp"  
				android:src="@drawable/more" />
		</TableRow>
		 <!--
		<View android:layout_width="fill_parent" android:layout_height="3dip"
			android:background="@color/darkGray" />
         
		<TableRow android:id="@+id/tblrowskipframes"
		android:padding="4dip">
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:paddingLeft="8dip"
				android:layout_height="wrap_content">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textSize="18sp"
					android:textColor="@color/white" android:textStyle="bold"
					android:text="@string/skipvideoframes" />
				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:singleLine="false"
					android:paddingTop="3dip" android:textColor="@color/offWhite"
					android:text="@string/skipvideoframesforseamlessviewing" />

			</LinearLayout>
			<CheckBox android:id="@+id/setting_skipframes_box"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_gravity="right" android:paddingRight="7dp" android:padding="3dp"
				android:checked="false" />
		</TableRow>
		-->

	</TableLayout>
</ScrollView>